--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             </ul>
         </nav>
     </header>
-    <div class="navbar-spacer"></div>
     <main>
         <section class="hero">
             <div class="hero-overlay">
@@ -37,8 +36,8 @@
                     </div>
                 </div>
                 <div class="hero-buttons">
-                    <a href="#services" class="hero-call-btn">Learn More</a>
-                    <a href="tel:+1234567890" class="hero-call-btn">Call Now</a>
+                    <a href="#services" class="hero-btn">Learn More</a>
+                    <a href="tel:+1234567890" class="hero-btn">Call Now</a>
                 </div>
             </div>
         </section>
