--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="hero-buttons">
                     <a href="#services" class="hero-btn">Learn More</a>
-                    <a href="tel:07799126426" class="hero-btn hero-btn-primary">
+                    <a href="tel:" class="hero-btn hero-btn-primary">
                         <svg class="phone-icon" width="22" height="22" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M6.54 5c.06.89.21 1.76.45 2.59l-1.2 1.2c-.41-1.2-.67-2.47-.76-3.79h1.51m9.86 12.02c.85.24 1.72.39 2.6.45v1.49c-1.32-.09-2.59-.35-3.8-.75l1.2-1.19M7.5 3H4c-.55 0-1 .45-1 1 0 9.39 7.61 17 17 17 .55 0 1-.45 1-1v-3.49c0-.55-.45-1-1-1-1.24 0-2.45-.2-3.57-.57-.35-.12-.75-.03-1.02.24l-2.2 2.2c-2.83-1.44-5.15-3.75-6.59-6.59l2.2-2.2c.27-.27.36-.67.24-1.02C8.7 6.45 8.5 5.25 8.5 4c0-.55-.45-1-1-1z"/>
                         </svg>
@@ -76,6 +76,18 @@
 
         <section id="testimonials">
             <h2>What Our Customers Say</h2>
+            <div class="google-reviews-summary">
+                <div class="google-rating">
+                    <div class="stars-large">
+                        <span>★★★★★</span>
+                    </div>
+                    <div class="rating-info">
+                        <span class="rating-score">5.0</span>
+                        <span class="rating-source">Google Reviews</span>
+                        <span class="review-count">Based on 50+ reviews</span>
+                    </div>
+                </div>
+            </div>
             <div class="testimonials-grid">
                 <div class="testimonial-card">
                     <div class="stars">
