fix: update social media links

--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
             <h2>Contact Us</h2>
             <p>Get in touch with us through social media or give us a call!</p>
             <ul>
-                <li><a href="https://facebook.com/yourcompany" target="_blank">Facebook</a></li>
-                <li><a href="https://instagram.com/yourcompany" target="_blank">Instagram</a></li>
+                <li><a href="https://www.facebook.com/dig.it.gardener/" target="_blank">Facebook</a></li>
+                <li><a href="https://instagram.com/dig.it.gardening" target="_blank">Instagram</a></li>
                 <li><a href="tel:07799126426">Call Us: 07799 126426</a></li>
             </ul>
         </section>
