feat: update hero image

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <p>Hi! I'm Iain, the owner and creator of Dig It Gardening. Clients have described me as friendly, cheerful and very knowledgeable and if you were to meet me you'd agree! I am a one man band but know people who can give me an extra pair of hands if the job is bigger than what I'm used to. I have a passion for gardening and a keen eye for detail, ensuring that every project is completed to the highest standard. My goal is to create beautiful, functional outdoor spaces that you can enjoy for years to come.</p>
                 </div>
                 <div class="about-images">
-                    <img src="assets/owner.jpg" alt="Owner/Operator" class="owner-image">
+                    <img src="assets/test_owner.jpg" alt="Owner/Operator" class="owner-image">
                 </div>
             </div>
         </section>
