--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
 
         <section id="testimonials">
             <h2>What Our Customers Say</h2>
-            <div class="google-reviews-summary">
-                <div class="google-rating">
+            <div class="reviews-summary">
+                <div class="rating">
                     <div class="stars-large">
                         <span>★★★★★</span>
                     </div>
                     <div class="rating-info">
                         <span class="rating-score">5.0</span>
-                        <span class="rating-source">Google Reviews</span>
+                        <span class="rating-source">Google Rating</span>
                         <span class="review-count">Based on 50+ reviews</span>
                     </div>
                 </div>
