feat: image updates

--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
             <h2>Our Services</h2>
             <div class="services-grid">
                 <div class="service-card">
-                    <img src="assets/garden3.png" alt="Garden Maintenance" class="service-image">
+                    <img src="assets/maintenance.jpg" alt="Garden Maintenance" class="service-image">
                     <h3>Garden Maintenance</h3>
                     <p>Regular maintenance to keep your garden looking its best all year round. Including lawn care, pruning, and seasonal planting.</p>
                     <a href="#contact" class="service-btn">Learn More</a>
                 </div>
                 
                 <div class="service-card">
-                    <img src="assets/garden2.jpg" alt="Landscape Design" class="service-image">
+                    <img src="assets/design.jpg" alt="Landscape Design" class="service-image">
                     <h3>Landscape Design</h3>
                     <p>Transform your outdoor space with our professional landscape design service. From concept to creation, we'll bring your vision to life.</p>
                     <a href="#contact" class="service-btn">Learn More</a>
                 </div>
                 
                 <div class="service-card">
-                    <img src="assets/garden3.png" alt="Garden Renovation" class="service-image">
+                    <img src="assets/reno.jpg" alt="Garden Renovation" class="service-image">
                     <h3>Garden Renovation</h3>
                     <p>Complete garden makeovers including paving, decking, fencing, and planting. Give your garden a fresh new look.</p>
                     <a href="#contact" class="service-btn">Learn More</a>
@@ -160,37 +160,37 @@
                 <div class="gallery-item">
                     <img src="assets/garden1.jpg" alt="Garden transformation 1" loading="lazy">
                     <div class="gallery-overlay">
-                        <span>Front Garden Renovation</span>
+                        <span>Rockery Creation</span>
                     </div>
                 </div>
                 <div class="gallery-item">
                     <img src="assets/garden2.jpg" alt="Garden transformation 2" loading="lazy">
                     <div class="gallery-overlay">
-                        <span>Modern Landscape Design</span>
+                        <span>Fencing</span>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="assets/garden3.png" alt="Garden transformation 3" loading="lazy">
+                    <img src="assets/garden3.jpg" alt="Garden transformation 3" loading="lazy">
+                    <div class="gallery-overlay">
+                        <span>Planting</span>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="assets/garden4.jpg" alt="Garden transformation 4" loading="lazy">
+                    <div class="gallery-overlay">
+                        <span>Landscape Design</span>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="assets/garden5.jpg" alt="Garden transformation 5" loading="lazy">
                     <div class="gallery-overlay">
                         <span>Garden Maintenance</span>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="assets/garden3.png" alt="Garden transformation 4" loading="lazy">
+                    <img src="assets/garden6.jpg" alt="Garden transformation 6" loading="lazy">
                     <div class="gallery-overlay">
-                        <span>Patio Installation</span>
-                    </div>
-                </div>
-                <div class="gallery-item">
-                    <img src="assets/garden1.jpg" alt="Garden transformation 5" loading="lazy">
-                    <div class="gallery-overlay">
-                        <span>Planting Design</span>
-                    </div>
-                </div>
-                <div class="gallery-item">
-                    <img src="assets/garden2.jpg" alt="Garden transformation 6" loading="lazy">
-                    <div class="gallery-overlay">
-                        <span>Garden Lighting</span>
+                        <span>Mowing</span>
                     </div>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                     <p>Hi! I'm Iain, the owner and creator of Dig It Gardening. Clients have described me as friendly, cheerful and very knowledgeable and if you were to meet me you'd agree! I am a one man band but know people who can give me an extra pair of hands if the job is bigger than what I'm used to. I have a passion for gardening and a keen eye for detail, ensuring that every project is completed to the highest standard. My goal is to create beautiful, functional outdoor spaces that you can enjoy for years to come.</p>
                 </div>
                 <div class="about-images">
-                    <img src="assets/test_owner.jpg" alt="Owner/Operator" class="owner-image">
+                    <img src="assets/owner.jpg" alt="Owner/Operator" class="owner-image">
                 </div>
             </div>
         </section>
